working on show of project
